tests/NormalTests/paczka1/fuzzy1/89533652.err
Error in line 3: 5SCixL A495 6,5
Error in line 12: fAUg A495 58,2
Error in line 15: VX9P A495 17,8
Error in line 30: fAUg S503 63,12
Error in line 25: VX9P A995 11,3
Error in line 31: VX9P S701 81,1
Error in line 26: fAUg S701 84,8
